# public/swagger.json
@@ -44,7 +44,7 @@
 					"gitHubToken": {
 						"type": "string"
 					},
-					"saveType": {
+					"saveTo": {
 						"type": "string"
 					}
 				},
@@ -52,8 +52,7 @@
 					"repoName",
 					"repoOwner",
 					"workflowName",
-					"gitHubToken",
-					"saveType"
+					"gitHubToken"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -92,15 +91,14 @@
 					"load": {
 						"type": "string"
 					},
-					"saveType": {
+					"loadFrom": {
 						"type": "string"
 					}
 				},
 				"required": [
 					"repoName",
 					"workflowName",
-					"load",
-					"saveType"
+					"load"
 				],
 				"type": "object",
 				"additionalProperties": false
