# src/controllers/download.controller.ts
@@ -8,18 +8,18 @@ import { IApiResponse, IDownloadConfig } from '../interface';
 export default class DownloadController {
   @Post("/")
   public async downloadGHAFilesAndLogs(@Body() body: IDownloadConfig): Promise<IApiResponse> {
-    // let repoName: string = body.repoName;
-    // let repoOwner: string = body.repoOwner;
-    // let workflowName: string = body.workflowName;
-    // let gitHubToken: string = body.gitHubToken;
-    let repoName: string = 'hibernate-orm';
-    let repoOwner: string = 'hibernate';
-    let workflowName: string = 'CodeQL';
-    let gitHubToken: string = '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';
-  
-    let saveType: string = "db" //TODO über Schnittstelle abfragen
+    let repoName: string = body.repoName;
+    let repoOwner: string = body.repoOwner;
+    let workflowName: string = body.workflowName;
+    let gitHubToken: string = body.gitHubToken;
+    let saveTo: string = body.saveTo || "local";
+    // let repoName: string = 'hibernate-orm';
+    // let repoOwner: string = 'hibernate';
+    // let workflowName: string = 'CodeQL';
+    // let gitHubToken: string = 'GitHubToken';
+    // let saveType: string = "db"
 
-    await new DownloadGHAFilesAndLogs(repoOwner, repoName, workflowName, gitHubToken).downloadFiles(saveType);
+    await new DownloadGHAFilesAndLogs(repoOwner, repoName, workflowName, gitHubToken).downloadFiles(saveTo);
 
     return {
         message: "The download was successful.",
