# src/controllers/kpis.controller.ts
@@ -9,14 +9,14 @@ export default class KPIsController {
 
   @Post("/")
   public async getKPIs(@Body() body: IKpisConfig): Promise<Kpis> {
-    // let repo: string = body.repoName;
-    // let workflow: string = body.workflowName;
+    let repo: string = body.repoName;
+    let workflow: string = body.workflowName;
+    let loadFrom: string = body.loadFrom || "local";
 
-    let repo: string = 'hibernate-orm';
-    let workflow: string = 'CodeQL';
-
-    let saveType: string = "db" //TODO über Schnittstelle abfragen
+    // let repo: string = 'hibernate-orm';
+    // let workflow: string = 'CodeQL';
+    // let saveType: string = "db" 
     
-    return await new GetKPIs(repo, workflow).getKPIs(saveType);
+    return await new GetKPIs(repo, workflow).getKPIs(loadFrom);
   }
 }
