# src/interface/IKpisConfig.model.ts
@@ -2,5 +2,5 @@ export interface IKpisConfig {
     repoName: string;
     workflowName: string;
     load: string;
-    saveType: string;
+    loadFrom?: string;
 }
